# PlexusTUI

./: .gitignore  LICENSE  README.md  plugin.py  plugin_config.yml  pyproject.toml
docs/: CUSTOM_TABS.md
examples/TUIDemoSpare/: plugin.py  plugin_config.yml
examples/WidgetDemo/: plugin.py  plugin_config.yml
examples/WidgetDemo/tui/: __init__.py  css.py  main_widget.py
plexus_tui/: __init__.py  app.py  log_handler.py  plugin.py  request_tracker.py
smoke/: tui_smoke.py  tui_smoke_config.yml  tui_smoke_node.py  tui_smoke_pair.py  tui_smoke_pair_a_config.yml  tui_smoke_pair_b_config.yml
tests/: test_tui_dashboard.py
