[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plexus-tui"
version = "0.40.0"
description = "Terminal UI dashboard plugin for the Plexus plugin framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Haflix", email = "info@haas-flo.de" },
]
keywords = [
    "plexus",
    "tui",
    "textual",
    "dashboard",
    "plugin",
    "monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
dependencies = [
    "plexus-core>=0.39.0",
    "textual>=8.2.3,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["plexus_tui*"]
