[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plexus-tui"
version = "2.14.0"
description = "Terminal UI dashboard plugin for the Plexus plugin framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Haflix", email = "info@haas-flo.de" },
]
keywords = [
    "plexus",
    "tui",
    "textual",
    "dashboard",
    "plugin",
    "monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
dependencies = [
    # plexus-core is not yet on PyPI. Until publication, install it
    # from source (sibling Plexus framework repo) BEFORE running
    # `pip install -e .` on this plugin. The version floor is the API
    # this plugin was developed against.
    "plexus-core>=0.39.0",
    "textual>=8.2.3,<9",
]

[project.urls]
Homepage = "https://github.com/Haflix/PlexusTUI"
Source = "https://github.com/Haflix/PlexusTUI"
Issues = "https://github.com/Haflix/PlexusTUI/issues"

[tool.setuptools.packages.find]
where = ["."]
# The `examples/` directory (TUIDemoSpare, WidgetDemo) is repo-only —
# users browse it on GitHub for reference but it isn't bundled into
# the pip distribution. Each demo is a standalone plugin with its
# own plugin.py + plugin_config.yml; users copy them into their own
# host config to try them out.
include = ["plexus_tui*"]
